@@ -4433,11 +4433,12 @@ proc get_standard_job_info { jobid { add_empty 0} { get_all 0 } } {
    set back ""
    set help [split $result "\n"]
    foreach line $help { 
+#      puts $CHECK_OUTPUT $line
       if { [lindex $line 0] == $jobid } {
          lappend back $line
       }
       if { $add_empty != 0 } {
-         if { [llength $line] == 9 } {
+         if { [llength $line] == 8 } {
             lappend back "-1 $line"
             puts $CHECK_OUTPUT "adding empty job lines" 
          }
